# routes/api.php
@@ -6,6 +6,7 @@ use Illuminate\Support\Facades\Route;
 use PayIn\Infrastructure\Http\Api\V1\Controllers\AccountController;
 use PayIn\Infrastructure\Http\Api\V1\Controllers\ClientController;
 use PayIn\Infrastructure\Http\Api\V1\Controllers\PayInController;
+use PayIn\Infrastructure\Http\Api\V1\Controllers\PaymentMethodController;
 
 Route::prefix('v1')
     ->middleware('payin.json')
@@ -24,6 +25,17 @@ Route::prefix('v1')
 
         Route::get('/accounts', [AccountController::class, 'index'])
             ->name('accounts.index');
+
+        Route::post('/payment-methods', [PaymentMethodController::class, 'store'])
+            ->name('payment-methods.store')
+            ->middleware('throttle:30,1');
+
+        Route::get('/payment-methods/{id}', [PaymentMethodController::class, 'show'])
+            ->name('payment-methods.show')
+            ->whereUuid('id');
+
+        Route::get('/payment-methods', [PaymentMethodController::class, 'index'])
+            ->name('payment-methods.index');
 
         Route::post('/payins', [PayInController::class, 'store'])
             ->name('payins.store')
